[package]
name = "tagme"
version = "0.1.0"
edition = "2024"
authors = ["Kemi-Amu <kemya@tuta.io>"]
description = "A simple web app for collecting tags"
license = "MIT"

[dependencies]
# web
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
askama = { version = "0.14.0", features = ["serde_json"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

sled = "0.34.7"
rmp-serde = "1.3.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.0", features = ["full"] }
clap = { version = "4.5.41", features = ["derive"] }
walkdir = "2.5.0"