[package]
name = "tagme"
version = "0.1.0"
edition = "2024"
authors = ["Kemi-Amu <kemya@tuta.io>"]
description = "A simple web app for collecting tags"
license = "AGPL-3.0-or-later"
categories = ["web-programming"]

[dependencies]
axum = "0.8.4"
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
# askama = { version = "0.14.0", features = ["serde_json"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

base64 = "0.22.1"
rmp-serde = "1.3.0"
serde_json = "1.0.140"
toml = "0.9.2"
sled = "0.34.7"
serde = { version = "1.0.219", features = ["derive"] }

tokio = { version = "1.46.0", features = ["full"] }
# walkdir = "2.5.0"
once_cell = "1.21.3"
# indexmap = { version = "2.10.0", features = ["serde"] }
rand = "0.9.1"
sha2 = "0.10.9"
time = "0.3.41"

# clap = { version = "4.5.41", features = ["derive"] }